Improve quick word search generator screen. Use of text fields instead of alert controller for entering words and title of the word search puzzle.

--- a/WordSearchGenerator/Base.lproj/Main.storyboard
+++ b/WordSearchGenerator/Base.lproj/Main.storyboard
@@ -248,7 +248,7 @@
         <scene sceneID="qSu-cB-m6I">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="g0U-LD-esX" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" id="v3s-ol-RZr"/>
+                    <tabBarItem key="tabBarItem" title="" id="v3s-ol-RZr"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vua-Ih-vGF">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -274,24 +274,24 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="g0U-LD-esX" kind="relationship" relationship="viewControllers" id="VOG-ty-Vhm"/>
                         <segue destination="Hyk-bE-EwU" kind="relationship" relationship="viewControllers" id="KsL-af-fTw"/>
+                        <segue destination="g0U-LD-esX" kind="relationship" relationship="viewControllers" id="VOG-ty-Vhm"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d5X-D9-f1n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="43" y="432"/>
+            <point key="canvasLocation" x="20" y="810"/>
         </scene>
-        <!--QuickWS View Controller-->
+        <!--Quick Puzzle View Controller-->
         <scene sceneID="k5h-T3-TCd">
             <objects>
-                <viewController id="cW3-tk-Fgc" customClass="QuickWSViewController" customModule="WordSearchGenerator" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="cW3-tk-Fgc" customClass="QuickPuzzleViewController" customModule="WordSearchGenerator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XWO-C0-P4M">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gvg-87-PnA">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="321.5" width="414" height="491.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" accessoryType="detailButton" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Word" textLabel="xY8-hJ-Pzt" detailTextLabel="0I4-US-DZJ" style="IBUITableViewCellStyleSubtitle" id="cuO-FB-hbG">
@@ -320,30 +320,95 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Word" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="jRR-7h-xdl">
+                                <rect key="frame" x="20" y="207.5" width="374" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Clue (optional)" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="uqA-Qv-pI6">
+                                <rect key="frame" x="20" y="245.5" width="374" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kuN-2p-zKv">
+                                <rect key="frame" x="345" y="283.5" width="49" height="30"/>
+                                <state key="normal" title="Submit"/>
+                                <connections>
+                                    <action selector="submitTapped:" destination="cW3-tk-Fgc" eventType="touchUpInside" id="WCn-Hj-WIV"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="tm0-zA-NF3">
+                                <rect key="frame" x="20" y="133" width="374" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Word" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGh-aK-gcu">
+                                <rect key="frame" x="20" y="179" width="76" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Word Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pIm-U4-Vhc">
+                                <rect key="frame" x="20" y="104" width="99" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="Gvg-87-PnA" firstAttribute="top" secondItem="GBH-OI-5fO" secondAttribute="top" id="9cl-ew-EZf"/>
+                            <constraint firstItem="GBH-OI-5fO" firstAttribute="trailing" secondItem="uqA-Qv-pI6" secondAttribute="trailing" constant="20" id="2ZL-dN-OZu"/>
+                            <constraint firstItem="tm0-zA-NF3" firstAttribute="leading" secondItem="GBH-OI-5fO" secondAttribute="leading" constant="20" id="36U-QA-XAn"/>
+                            <constraint firstItem="pIm-U4-Vhc" firstAttribute="leading" secondItem="GBH-OI-5fO" secondAttribute="leading" constant="20" id="5hy-39-U6f"/>
+                            <constraint firstItem="GBH-OI-5fO" firstAttribute="trailing" secondItem="kuN-2p-zKv" secondAttribute="trailing" constant="20" id="Bxv-2N-fYo"/>
+                            <constraint firstItem="kuN-2p-zKv" firstAttribute="top" secondItem="uqA-Qv-pI6" secondAttribute="bottom" constant="8" id="Fhb-63-PiJ"/>
+                            <constraint firstItem="jRR-7h-xdl" firstAttribute="top" secondItem="IGh-aK-gcu" secondAttribute="bottom" constant="8" id="HHh-2s-kme"/>
+                            <constraint firstItem="IGh-aK-gcu" firstAttribute="top" secondItem="tm0-zA-NF3" secondAttribute="bottom" constant="16" id="K0c-lt-meK"/>
+                            <constraint firstItem="GBH-OI-5fO" firstAttribute="trailing" secondItem="jRR-7h-xdl" secondAttribute="trailing" constant="20" id="agj-rs-3k4"/>
+                            <constraint firstItem="uqA-Qv-pI6" firstAttribute="leading" secondItem="GBH-OI-5fO" secondAttribute="leading" constant="20" id="c0h-mM-4ag"/>
                             <constraint firstItem="Gvg-87-PnA" firstAttribute="trailing" secondItem="GBH-OI-5fO" secondAttribute="trailing" id="ctw-jK-FRr"/>
+                            <constraint firstItem="pIm-U4-Vhc" firstAttribute="top" secondItem="GBH-OI-5fO" secondAttribute="top" constant="16" id="ey7-DB-Qkj"/>
                             <constraint firstItem="Gvg-87-PnA" firstAttribute="bottom" secondItem="GBH-OI-5fO" secondAttribute="bottom" id="hJ8-z4-yX6"/>
                             <constraint firstItem="Gvg-87-PnA" firstAttribute="leading" secondItem="GBH-OI-5fO" secondAttribute="leading" id="iI3-SX-AR3"/>
+                            <constraint firstItem="tm0-zA-NF3" firstAttribute="top" secondItem="pIm-U4-Vhc" secondAttribute="bottom" constant="8" id="jn9-7d-adf"/>
+                            <constraint firstItem="uqA-Qv-pI6" firstAttribute="top" secondItem="jRR-7h-xdl" secondAttribute="bottom" constant="8" id="ozi-aW-8R8"/>
+                            <constraint firstItem="jRR-7h-xdl" firstAttribute="leading" secondItem="GBH-OI-5fO" secondAttribute="leading" constant="20" id="pXZ-OX-IoS"/>
+                            <constraint firstItem="IGh-aK-gcu" firstAttribute="leading" secondItem="GBH-OI-5fO" secondAttribute="leading" constant="20" id="y7J-5P-caf"/>
+                            <constraint firstItem="Gvg-87-PnA" firstAttribute="top" secondItem="kuN-2p-zKv" secondAttribute="bottom" constant="8" id="yRo-xW-Dln"/>
+                            <constraint firstItem="GBH-OI-5fO" firstAttribute="trailing" secondItem="tm0-zA-NF3" secondAttribute="trailing" constant="20" id="yxN-FE-Q2I"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GBH-OI-5fO"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="QuQ-sm-3Iq" appends="YES" id="6QH-aG-iXy"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="IDe-UL-gWw"/>
                     <connections>
+                        <outlet property="clueTextField" destination="uqA-Qv-pI6" id="c6o-JL-b4g"/>
+                        <outlet property="listNameTextField" destination="tm0-zA-NF3" id="pP2-0G-dUm"/>
+                        <outlet property="submitButton" destination="kuN-2p-zKv" id="zfD-rn-KuE"/>
                         <outlet property="tableView" destination="Gvg-87-PnA" id="YRJ-oC-REp"/>
+                        <outlet property="wordTextField" destination="jRR-7h-xdl" id="dyC-5I-XN3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zuv-4l-wrg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="QuQ-sm-3Iq">
+                    <connections>
+                        <action selector="backgroundTapped:" destination="cW3-tk-Fgc" id="T6e-sr-P5x"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1544.9275362318842" y="809.59821428571422"/>
         </scene>
-        <!--Quick Gen-->
+        <!--Navigation Controller-->
         <scene sceneID="kak-ty-x7i">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Hyk-bE-EwU" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Quick Gen" id="Mgf-QN-ZWg"/>
+                    <tabBarItem key="tabBarItem" title="" id="Mgf-QN-ZWg"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4iO-hI-XUx">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
